--- a/index.html
+++ b/index.html
@@ -380,10 +380,10 @@
                     </li>
                 </ul>
             </div>
-            <div class="footer-sumbit">
-                <label for="footer-emaill">
-                    <p class="footer-social">Subscribe</p>
-                    <form action="" class="footer-form">
+            <div class="footer-paragraph-sumbit">
+                <label for="footer-paragraph-emaill">
+                    <p class="footer-paragraph">Subscribe</p>
+                    <form action="" class="footer-paragraph-form">
                         <input type="email" class="footer-email" id="footer-email" placeholder="E-mail">
                         <a href="" class="footer-btn-link">
                             <button type="sumbit" class="footer-btn">Subscribe
