--- a/index.html
+++ b/index.html
@@ -381,10 +381,10 @@
                 </ul>
             </div>
             <div class="footer-paragraph-sumbit">
-                <label for="footer-paragraph-emaill">
-                    <p class="footer-paragraph">Subscribe</p>
-                    <form action="" class="footer-paragraph-form">
-                        <input type="email" class="footer-email" id="footer-email" placeholder="E-mail">
+                    <p class="footer-paragraph-title">Subscribe</p>
+                <form action="" class="footer-paragraph-form">
+                    <label for="footer-paragraph-emaill">
+                            <input type="email" class="footer-email" id="footer-email" placeholder="E-mail">
                         <a href="" class="footer-btn-link">
                             <button type="sumbit" class="footer-btn">Subscribe
                                     <svg class="footer-icons-email" width="24" height="24">
@@ -392,8 +392,8 @@
                                     </svg>
                             </button>
                         </a>
-                    </form>
-                </label>
+                    </label>
+                </form>
             </div>
         </div>
     </footer>
