--- a/index.html
+++ b/index.html
@@ -380,15 +380,15 @@
                     </li>
                 </ul>
             </div>
-            <div class="footer-paragraph-sumbit">
-                    <p class="footer-paragraph-title">Subscribe</p>
-                <form action="" class="footer-paragraph-form">
-                    <label for="footer-paragraph-emaill">
-                            <input type="email" class="footer-email" id="footer-email" placeholder="E-mail">
-                        <a href="" class="footer-btn-link">
-                            <button type="sumbit" class="footer-btn">Subscribe
-                                    <svg class="footer-icons-email" width="24" height="24">
-                                        <use class="footer-img-email" href="./images/icons.svg#icon-Frame"></use>
+            <div class="paragraph">
+                    <p class="paragraph-title">Subscribe</p>
+                <form action="" class="paragraph-form">
+                    <label for="paragraph-emaill">
+                        <input type="email" class="paragraph-email-input" id="footer-email" placeholder="E-mail">
+                        <a href="" class="paragraph-btn-link">
+                            <button type="sumbit" class="paragraph-btn">Subscribe
+                                    <svg class="paragraph-icons-email" width="24" height="24">
+                                        <use class="paragraph-img-email" href="./images/icons.svg#icon-Frame"></use>
                                     </svg>
                             </button>
                         </a>
