--- a/index.html
+++ b/index.html
@@ -382,11 +382,11 @@
             </div>
             <div class="paragraph">
                     <p class="paragraph-title">Subscribe</p>
-                <form action="" class="paragraph-form">
-                    <label for="paragraph-emaill">
-                        <input type="email" class="paragraph-email-input" id="footer-email" placeholder="E-mail">
+                <form t action="" class="paragraph-form">
+                    <label for="paragraph-email-label">
+                        <input type="email" class="paragraph-email-input" name="Email" id="footer-email" placeholder="E-mail">
                         <a href="" class="paragraph-btn-link">
-                            <button type="sumbit" class="paragraph-btn">Subscribe
+                            <button type="submit" class="paragraph-btn">Subscribe
                                     <svg class="paragraph-icons-email" width="24" height="24">
                                         <use class="paragraph-img-email" href="./images/icons.svg#icon-Frame"></use>
                                     </svg>
