--- a/index.html
+++ b/index.html
@@ -382,16 +382,14 @@
             </div>
             <div class="paragraph">
                     <p class="paragraph-title">Subscribe</p>
-                <form t action="" class="paragraph-form">
+                <form class="paragraph-form">
                     <label for="paragraph-email-label">
-                        <input type="email" class="paragraph-email-input" name="Email" id="footer-email" placeholder="E-mail">
-                        <a href="" class="paragraph-btn-link">
+                        <input type="email" class="paragraph-email-input" name="paragraph-email-label" id="paragraph-email-label" placeholder="E-mail">
                             <button type="submit" class="paragraph-btn">Subscribe
                                     <svg class="paragraph-icons-email" width="24" height="24">
-                                        <use class="paragraph-img-email" href="./images/icons.svg#icon-Frame"></use>
+                                        <use href="./images/icons.svg#icon-Frame"></use>
                                     </svg>
                             </button>
-                        </a>
                     </label>
                 </form>
             </div>
