--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             <div class="paragraph">
                 <p class="paragraph-title">Subscribe</p>
                 <form class="paragraph-form">
-                    <label for="paragraph-email-label" class="paragraph-label">
+                    <label for="paragraph-email-label" class="paragraph_label">
                         <input type="email" class="paragraph-email-input" name="paragraph-email-label" id="paragraph-email-label" placeholder="E-mail">
                     </label>
                     <button type="submit" class="paragraph-btn">Subscribe
