--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                     <use class="btn-img" href="./images/icons.svg#icon-closeblack"></use>
                 </svg>
             </button>
-            <div class="modal-box">
+            <div class="modal-container">
                 <p class="modal-title">
                     Leave your contacts and we will call you back
                 </p>
