--- a/index.html
+++ b/index.html
@@ -408,34 +408,34 @@
             <form class="modal-form">
                 <div class="modal-field">
                     <label for="user-name" class="modal-label">Name</label>
-                    <div class="input-wrapper">
-                        <input type="text" name="user-name" id="user-name" class="modal-input" placeholder="">
+                    <div class="input-container">
+                        <input type="text" name="user-name" id="user-name" class="modal-input">
                         <svg class="modal-icon" width="24" height="24">
-                            <use class="modal-img" href="./images/icons.svg#icon-personblack"></use>
+                            <use href="./images/icons.svg#icon-personblack"></use>
                         </svg>
                     </div>
                 </div>
                 <div class="modal-field">
                     <label for="user-name" class="modal-label">Phone</label>
-                    <div class="input-wrapper">
-                        <input type="text" name="user-name" id="user-name" class="modal-input" placeholder="">
+                    <div class="input-container">
+                        <input type="text" name="user-name" id="user-name" class="modal-input">
                         <svg class="modal-icon" width="24" height="24">
-                            <use class="modal-img" href="./images/icons.svg#icon-phoneblack"></use>
+                            <use href="./images/icons.svg#icon-phoneblack"></use>
                         </svg>
                     </div>
                 </div>
                 <div class="modal-field">
                     <label for="user-name" class="modal-label">Email</label>
                     <div class="input-wrapper">
-                        <input type="text" name="user-name" id="user-name" class="modal-input" placeholder="">
+                        <input type="text" name="user-name" id="user-name" class="modal-input">
                         <svg class="modal-icon" width="24" height="24">
-                            <use class="modal-img" href="./images/icons.svg#icon-emailblack"></use>
+                            <use href="./images/icons.svg#icon-emailblack"></use>
                         </svg>
                     </div>
                 </div>
                 <div class="modal-field">
                     <label for="user-name" class="modal-label">Comment</label>
-                    <div class="input-wrapper">
+                    <div class="input-container">
                         <input type="text" name="user-name" id="user-name" class="modal-input-comment" placeholder="Text-input">
                     </div>
                 </div>
