--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                     <label for="user-name" class="modal-label">Name</label>
                     <div class="input-container">
                         <input type="text" name="user-name" id="user-name" class="modal-input">
-                        <svg class="modal-icon" width="24" height="24">
+                        <svg class="modal-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-personblack"></use>
                         </svg>
                     </div>
@@ -419,33 +419,31 @@
                     <label for="user-name" class="modal-label">Phone</label>
                     <div class="input-container">
                         <input type="text" name="user-name" id="user-name" class="modal-input">
-                        <svg class="modal-icon" width="24" height="24">
+                        <svg class="modal-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-phoneblack"></use>
                         </svg>
                     </div>
                 </div>
                 <div class="modal-field">
                     <label for="user-name" class="modal-label">Email</label>
-                    <div class="input-wrapper">
+                    <div class="input-container">
                         <input type="text" name="user-name" id="user-name" class="modal-input">
-                        <svg class="modal-icon" width="24" height="24">
+                        <svg class="modal-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-emailblack"></use>
                         </svg>
                     </div>
                 </div>
                 <div class="modal-field">
-                    <label for="user-name" class="modal-label">Comment</label>
-                    <div class="input-container">
-                        <input type="text" name="user-name" id="user-name" class="modal-input-comment" placeholder="Text-input">
-                    </div>
+                    <label for="user-comment" class="modal-label">Comment</label>
+                    <textarea type="text"  name="user-comment"  id="user-comment" class="modal-input-comment" placeholder="Text input"></textarea>
                 </div>
                 <div class="modal-policy">
-                    <input id="user-policy" type="text" class="visually-hidden">
-                    <label for="user-policy" class="modal-class">
+                    <input id="user-privacy" type="checkbox" value="true" name="user-privacy"  class="visually-hidden">
+                    <label for="user-privacy" class="modal-class">
                         I accept the terms and conditions of the
                         <span class="modal-cube">
-                            <svg class="modal-policy-icon" width="16" height="16">
-                                <use class="modal-policy-img"></use>
+                            <svg class="modal-policy-icon" width="10" height="8">
+                                <use href="./images/icons.svg#icon-Vector" class="modal-policy-img"></use>
                             </svg>
                         </span>
                         <a href="" class="label-modal-policy"> Privacy Policy</a>
