--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             </div>
         </div>
     </footer>
-    <div class="registration">
+    <div class="registration ist-open">
         <div class="modal">
             <button type="button" class="modal-open">
                 <svg class="btn-icon-close" width="8" height="8">
