--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                         I accept the terms and conditions of the
                         <span class="modal-cube">
                             <svg class="modal-policy-icon" width="10" height="8">
-                                <use href="./images/icons.svg#icon-Vector" class="modal-policy-img"></use>
+                                <use href="./images/icons.svg#icon-click" class="modal-policy-img"></use>
                             </svg>
                         </span>
                         <a href="" class="label-modal-policy"> Privacy Policy</a>
