--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                     <div class="input-container">
                         <input type="text" name="user-name" id="user-name" class="modal-input">
                         <svg class="modal-icon" width="18" height="24">
-                            <use href="./images/icons.svg#icon-personblack"></use>
+                            <use href="./images/icons.svg#icon-personblack1"></use>
                         </svg>
                     </div>
                 </div>
