--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                         </svg>
                     </div>
                 </div>
-                <div class="modal-field">
+                <div class="modal-field block">
                     <label for="user-comment" class="modal-label">Comment</label>
                     <textarea type="text"  name="user-comment"  id="user-comment" class="modal-input-comment" placeholder="Text input"></textarea>
                 </div>
