--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                 <div class="modal-field">
                     <label for="user-name" class="modal-label">Name</label>
                     <div class="input-container">
-                        <input type="text" name="user-name" id="user-name" class="modal-input">
+                        <input type="text" name="user-name" id="user-name" class="modal-input"/>
                         <svg class="modal-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-personblack1"></use>
                         </svg>
@@ -418,7 +418,7 @@
                 <div class="modal-field">
                     <label for="user-name" class="modal-label">Phone</label>
                     <div class="input-container">
-                        <input type="text" name="user-name" id="user-name" class="modal-input">
+                        <input type="text" name="user-name" id="user-name" class="modal-input"/>
                         <svg class="modal-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-phoneblack"></use>
                         </svg>
@@ -427,7 +427,7 @@
                 <div class="modal-field">
                     <label for="user-name" class="modal-label">Email</label>
                     <div class="input-container">
-                        <input type="text" name="user-name" id="user-name" class="modal-input">
+                        <input type="text" name="user-name" id="user-name" class="modal-input"/>
                         <svg class="modal-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-emailblack"></use>
                         </svg>
