--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 <div class="modal-field">
                     <label for="user-name" class="modal-label">Phone</label>
                     <div class="input-container">
-                        <input type="text" name="user-name" id="user-name" class="modal-input"/>
+                            <input type="text" name="user-name" id="user-name" class="modal-input"/>
                         <svg class="modal-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-phoneblack"></use>
                         </svg>
@@ -427,7 +427,7 @@
                 <div class="modal-field">
                     <label for="user-name" class="modal-label">Email</label>
                     <div class="input-container">
-                        <input type="text" name="user-name" id="user-name" class="modal-input"/>
+                            <input type="text" name="user-name" id="user-name" class="modal-input"/>
                         <svg class="modal-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-emailblack"></use>
                         </svg>
@@ -435,10 +435,10 @@
                 </div>
                 <div class="modal-field block">
                     <label for="user-comment" class="modal-label">Comment</label>
-                    <textarea type="text"  name="user-comment"  id="user-comment" class="modal-input-comment" placeholder="Text input"></textarea>
+                    <textarea type="text"  name="user-comment"  id="user-comment" class="modal-input-comment" placeholder="Text_input"></textarea>
                 </div>
                 <div class="modal-policy">
-                    <input id="user-privacy" type="checkbox" value="true" name="user-privacy"  class="visually-hidden">
+                     <input id="user-privacy" type="checkbox" value="true" name="user-privacy"  class="visually-hidden"/>
                     <label for="user-privacy" class="modal-class">
                         I accept the terms and conditions of the
                         <span class="modal-cube">
