--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 </div>
                 <div class="modal-field block">
                     <label for="user-comment" class="modal-label">Comment</label>
-                    <textarea type="text"  name="user-comment"  id="user-comment" class="modal-input-comment" placeholder="Text_input"></textarea>
+                    <textarea type="text"  name="user-comment"  id="user-comment" class="modal-input-comment" placeholder="Text input"></textarea>
                 </div>
                 <div class="modal-policy">
                      <input id="user-privacy" type="checkbox" value="true" name="user-privacy"  class="visually-hidden"/>
