--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                     </div>
                 </div>
                 <div class="modal-field">
-                    <label for="user-name" class="modal-label">Phone</label>
+                    <label for="user-phone" class="modal-label">Phone</label>
                     <div class="input-container">
                             <input type="text" name="user-phone" id="user-phone" class="modal-input"/>
                         <svg class="modal-icon" width="18" height="24">
@@ -425,7 +425,7 @@
                     </div>
                 </div>
                 <div class="modal-field">
-                    <label for="user-name" class="modal-label">Email</label>
+                    <label for="user-email" class="modal-label">Email</label>
                     <div class="input-container">
                             <input type="text" name="user-email" id="user-email" class="modal-input"/>
                         <svg class="modal-icon" width="18" height="24">
