--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@
                     </div>
                 </div>
                 <div class="modal-field block">
-                    <label for="user-comment" class="modal-comment">Comment</label>
-                    <textarea type="text" name="user-comment" id="user-comment" class="text-area" placeholder="Text input"></textarea>
+                    <label for="user-comment" class="modal-label">Comment</label>
+                    <textarea type="text" name="user-comment" id="user-comment" class="modal-comment-area" placeholder="Text input"></textarea>
                 </div>
                 <div class="modal-policy">
                      <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="visually-hidden"/>
