--- a/index.html
+++ b/index.html
@@ -416,9 +416,9 @@
                     </div>
                 </div>
                 <div class="modal-field">
-                    <label for="user-phone" class="modal-label">Phone</label>
+                    <label for="user-tel" class="modal-label">Phone</label>
                     <div class="input-container">
-                            <input type="text" name="user-phone" id="user-phone" class="modal-input"/>
+                            <input type="text" name="user-tel" id="user-tel" class="modal-input"/>
                         <svg class="modal-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-phoneblack"></use>
                         </svg>
@@ -435,8 +435,8 @@
                 </div>
                 <div class="modal-field block">
                     <label for="user-comment" class="modal-label">Comment</label>
-                    <textarea type="text" name="user-comment" id="user-comment" class="modal-comment-area" placeholder="Text input"></textarea>
-                </div>
+                    <textarea type="text" id="user-comment" name="user-comment" class="modal-comment-area" placeholder="Text input"></textarea>
+                </div> 
                 <div class="modal-policy">
                      <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="visually-hidden"/>
                     <label for="user-privacy" class="modal-class">
