--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 </div>
                 <div class="modal-field block">
                     <label for="user-comment" class="modal-label">Comment</label>
-                    <textarea type="text" id="user-comment" name="user-comment" class="modal-comment-area" placeholder="Text input"></textarea>
+                    <textarea id="user-comment" name="user-comment" placeholder="Text input" class="modal-comment-area"></textarea>
                 </div> 
                 <div class="modal-policy">
                      <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="visually-hidden"/>
